Add Google Analytics and Search Console verification for enhanced SEO monitoring

--- a/index.html
+++ b/index.html
@@ -456,7 +456,18 @@
         </div>
     </footer>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-542N76MZK3"></script>
     <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-542N76MZK3');
+    </script>
+
+    <script>
+        
         // Enhanced iframe loading
         document.addEventListener('DOMContentLoaded', function() {
             const iframe = document.querySelector('.game-iframe');
