--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     
+    <!-- SEO Files -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml">
+    <link rel="author" href="/humans.txt">
+    
     <!-- Schema.org JSON-LD -->
     <script type="application/ld+json">
     {
